--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -32,6 +32,15 @@
     }
   }
 
+  .inactive {
+    background: lightslategray;
+    color: white;
+
+    &:hover {
+      cursor: auto;
+    }
+  }
+
   .kosygin {
     position: relative;
     top: 40px;
