--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -2,9 +2,12 @@
   display: flex;
   flex-direction: column;
   width: 400px;
+  height: 100%;
   font-size: 18px;
   border: #2196F3 solid 2px;
-  border-radius: 5px;
+  border-radius: 0px 0 5px 0px;
+  border-left: none;
+  border-top: none;
   padding-right: 15px;
   padding-bottom: 15px;
 
@@ -12,6 +15,7 @@
     border: 1px solid #2196F3;
     border-radius: 15px;
     margin: 30px 10px 10px 10px;
+    width: 370px;
     .input {
       position: relative;
       font-size: 22px;
