--- a/src/components/PersonBlock/PersonBlock.module.scss
+++ b/src/components/PersonBlock/PersonBlock.module.scss
@@ -1,9 +1,14 @@
 .root {
   display: flex;
-  margin: 10px;
+  margin: 25px;
+
   img {
     border-radius: 2%;
     width: 300px;
     height: 360px;
+  }
+
+  .text {
+    margin-left: 20px;
   }
 }
