--- a/src/components/Chat/Chat.module.scss
+++ b/src/components/Chat/Chat.module.scss
@@ -10,6 +10,7 @@
   border-top: none;
   padding-right: 15px;
   padding-bottom: 15px;
+  margin-right: 100px;
 
   .sendMessage {
     border: 1px solid #2196F3;
