--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   background: #2196F3;
   padding-left: 62px;
+  width: 100%;
 
   @media (max-width: 444px) {
     padding-left: 30px;
