--- a/src/pages/Dimension/Dimension.module.scss
+++ b/src/pages/Dimension/Dimension.module.scss
@@ -7,12 +7,17 @@
   width: 900px;
 
   margin-top: 90px;
-  margin-right: $margin-size;
-  margin-left: $margin-size;
+  margin-right: auto;
+  margin-left: auto;
 
   h1 {
     margin-bottom: 20px;
     color: #1E88E5;
+  }
+
+  h2 {
+    margin-top: 10px;
+    color: #469ce6;
   }
 
   .cover {
