--- a/src/pages/Dimension/Dimension.module.scss
+++ b/src/pages/Dimension/Dimension.module.scss
@@ -10,6 +10,10 @@
   margin-right: auto;
   margin-left: auto;
 
+  @media (max-width: 1600px){
+    width: 800px;
+  }
+
   h1 {
     margin-bottom: 20px;
     color: #1E88E5;
