--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,15 +1,23 @@
 .root {
   display: flex;
+  flex-direction: column;
   font-size: 20px;
 
   width: 900px;
 
-  padding-top: 150px;
+  padding-top: 100px;
   margin-right: auto;
   margin-left: auto;
 
   h1 {
     text-align: center;
     color: #1E88E5;
+  }
+
+  iframe {
+    margin-top: 20px;
+    border-radius: 10px;
+    border: 2px solid #2196F3;
+    height: 500px;
   }
 }
